<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Tarea04</string>
    <string name="titulo">¡Bienvenido!</string>
    <string name="instrucciones">Ingrese sus datos</string>
    <string name="feedbacktype">Seleccione una</string>
    <string name="feedbacktype1">Pollo</string>
    <string name="feedbacktype2">Carne</string>
    <string name="feedbacktype3">Vegana</string>
    <string name="feedbacktype4">Pastor</string>
    <string name="prepara_tu_hamburguesa">¡Prepara tu hamburguesa!</string>
    <string name="escriba_su_nombre">Escriba su nombre</string>
    <string name="escriba_su_email">Escriba su email</string>
    <string name="fecha_de_nacimiento">Fecha de nacimiento:</string>
    <string name="contrase_a">Contraseña</string>
    <string name="confirme_su_contrase_a">Confirme su contraseña</string>
    <string name="acepto_los_t_rminos_y_condiciones">Acepto los términos y condiciones</string>
    <string name="regresar">Regresar</string>
    <string name="enviar_datos">Enviar Datos</string>





    <string name="action_settings">Settings</string>
    <string name="intro_text">Droid Desserts</string>
    <string name="choose_a_dessert">Choose a dessert.</string>
    <string name="donuts">Donuts are glazed and sprinkled with candy.</string>
    <string name="ice_cream_sandwiches">Ice cream sandwiches have
        chocolate wafers and vanilla filling</string>
    <string name="froyo">FroYo is premium self-serve frozen yogurt.</string>
    <string name="donut_order_message">You ordered a donut.</string>
    <string name="ice_cream_order_message">You ordered an ice cream sandwich.</string>
    <string name="froyo_order_message">You ordered a FroYo.</string>
    <string name="choose_delivery_method">Choose a delivery method:</string>
    <string name="same_day_messenger_service">Same day messenger service</string>
    <string name="next_day_ground_delivery">Next day ground delivery</string>
    <string name="pick_up">Pick up</string>
    <string name="chosen">"Chosen: "</string>
    <string name="nothing_clicked">onRadioButtonClicked: Nothing clicked.</string>
    <string name="menu_opt2">App Information</string>


    <string name="action_order_message">You selected Order.</string>
    <string name="action_status_message">You selected Status.</string>
    <string name="action_favorites_message">You selected Favorites.</string>
    <string name="action_contact_message">You selected Contact.</string>

    <string name="google_mtv_coord_zoom12">geo:37.422114,-122.086744?z=12</string>es

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="my_app_title">My App</string>
    <string name="hello_world">Hello World!</string>
    <string name="import_camera">Import</string>
    <string name="gallery">Gallery</string>
    <string name="slideshow">Slideshow</string>
    <string name="tools">Tools</string>
    <string name="communicate">Communicate</string>
    <string name="share">Share</string>
    <string name="send">Send</string>
    <string name="chose_camera">You chose Camera Import.</string>
    <string name="chose_gallery">You chose the Gallery.</string>
    <string name="chose_slideshow">You chose the Slideshow.</string>
    <string name="chose_tools">You chose Tools.</string>
    <string name="chose_share">You chose Share.</string>
    <string name="chose_send">You chose Send.</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="opcion_menu1">Opción 1</string>
    <string name="opcion_menu2">Opción 2</string>
    <string name="opcion_menu3">Opción 3</string>


</resources>
