<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo04"
    android:gravity="top"
    android:scrollbars="vertical"
    android:padding="40dp">


    <LinearLayout

        android:layout_width="fill_parent"
        android:orientation="vertical"
        android:layout_height="fill_parent">

        <TextView
            android:id="@+id/TextViewTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/titulo"
            android:textColor="@color/black"
            android:textSize="20pt"
            android:textStyle="bold">
        </TextView>

        <TextView
            android:id="@+id/TextViewInstrucciones"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/instrucciones"
            android:textColor="@color/black"
            android:textSize="10pt">
        </TextView>

        <EditText
            android:id="@+id/EditTextName"
            android:layout_height="wrap_content"
            android:hint="@string/escriba_su_nombre"
            android:inputType="textPersonName"
            android:backgroundTint="@color/box"
            android:layout_marginTop="20dp"
            android:layout_width="fill_parent">
        </EditText>

        <EditText
            android:id="@+id/EditTextEmail"
            android:layout_height="wrap_content"
            android:hint="@string/escriba_su_email"
            android:inputType="textEmailAddress"
            android:backgroundTint="@color/box"
            android:layout_marginTop="20dp"
            android:layout_width="fill_parent">
        </EditText>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fecha_de_nacimiento"
            android:layout_marginTop="25dp"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:layout_gravity="center"/>

        <DatePicker
            android:id="@+id/datePicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:calendarViewShown="false"
            android:layout_marginTop="16dp"
            android:layout_gravity="center"/>

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/contrase_a"
            android:layout_marginTop="20dp"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:backgroundTint="@color/box" />

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirme_su_contrase_a"
            android:layout_marginTop="10dp"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:backgroundTint="@color/box" />

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/acepto_los_t_rminos_y_condiciones"
            android:textColor="@color/black"
            android:checked="true"
            android:padding="8dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="15dp">

            <Button
                android:id="@+id/buttonBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/regresar"
                android:layout_weight="1"
                android:backgroundTint="#EDBB99"
                android:layout_marginStart="8dp" />

            <Button
                android:id="@+id/buttonSend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enviar_datos"
                android:layout_weight="1"
                android:backgroundTint="#82E0AA"
                android:layout_marginEnd="8dp" />

        </LinearLayout>

    </LinearLayout>
</ScrollView>