<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/content_main"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.droid_cafe.MainActivity"
    tools:showIn="@layout/activity_main">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <TextView
        android:id="@+id/textintro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_heading"
        android:padding="@dimen/padding_regular"
        android:text="@string/intro_text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_regular"
        android:id="@+id/choose_dessert"
        android:layout_below="@id/textintro"
        android:text="@string/choose_a_dessert"/>

        <ImageView
            android:id="@+id/donut"
            android:layout_width="202dp"
            android:layout_height="139dp"
            android:layout_below="@id/choose_dessert"
            android:contentDescription="@string/donuts"
            android:onClick="showDonutOrder"
            android:padding="@dimen/padding_regular"
            android:src="@drawable/donut_circle" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_wide"
        android:layout_below="@id/choose_dessert"
        android:layout_toEndOf="@id/donut"
        android:text="@string/donuts"/>

        <ImageView
            android:id="@+id/ice_cream"
            android:layout_width="202dp"
            android:layout_height="139dp"
            android:layout_below="@id/donut"
            android:contentDescription="@string/ice_cream_sandwiches"
            android:onClick="showIceCreamOrder"
            android:padding="@dimen/padding_regular"
            android:src="@drawable/icecream_circle" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_wide"
        android:layout_below="@id/donut"
        android:layout_toEndOf="@id/ice_cream"
        android:text="@string/ice_cream_sandwiches"/>

        <ImageView
            android:id="@+id/froyo"
            android:layout_width="202dp"
            android:layout_height="139dp"
            android:layout_below="@id/ice_cream"
            android:contentDescription="@string/froyo"
            android:onClick="showFroyoOrder"
            android:padding="@dimen/padding_regular"
            android:src="@drawable/froyo_circle" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_wide"
        android:layout_below="@id/ice_cream"
        android:layout_toEndOf="@id/froyo"
        android:text="@string/froyo"/>

    </RelativeLayout>


</ScrollView>